Bug 898576 - Ignore cold phi inputs when specializing phi types. (r=jandem)